Global csrf protection
Former-commit-id: 72605600da2d6bb0edd137e16a5cfba84e3e5360

--- a/templates/base.html
+++ b/templates/base.html
@@ -232,6 +232,7 @@
     <script src="{% static "vendor/moment/min/moment-with-locales.min.js" %}" type="text/javascript"></script>
     <script src="{% static "vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js" %}" type="text/javascript"></script>
 
+    <script src="{% static "js/csrf.js" %}"></script>
     <script src="{% static "js/main.js" %}"></script>
     <!-- Select2 init -->
     <script type="text/javascript">
