--- a/templates/filters.html
+++ b/templates/filters.html
@@ -11,6 +11,7 @@
 </script>
 
 <div id="filters">
+    {% csrf_token %}
     <div id="list-filters" class="row">
         <form>
             <div class="col-md-10 clearfix" id="filterlist">
